register and login creation - TM

--- a/marvel_phonebook_app/templates/register.html
+++ b/marvel_phonebook_app/templates/register.html
@@ -10,8 +10,8 @@
         {{ user_form.hidden_tag() }}
         <div class="form-group container">
             <fieldset>
-                {{ user_form.heroname.label }}
-                {{ user_form.heroname(class="form-control", placeholder = "Add Hero Name") }}
+                {{ user_form.username.label }}
+                {{ user_form.username(class="form-control", placeholder = "Add User Name") }}
             </fieldset>
 
             <fieldset>
