--- a/marvel_phonebook_app/templates/nav.html
+++ b/marvel_phonebook_app/templates/nav.html
@@ -7,6 +7,7 @@
       <div class="navbar-nav">
         <a class="nav-item nav-link active" href="{{ url_for('home') }}">Home <span class="sr-only">(current)</span></a>
         <a class="nav-item nav-link" href="{{ url_for('register') }}">Register</a>
+        <a class="nav-item nav-link" href="{{ url_for('login') }}">Login</a>
       </div>
     </div>
   </nav>
