--- a/marvel_phonebook_app/templates/home.html
+++ b/marvel_phonebook_app/templates/home.html
@@ -1,5 +1,23 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>Whatup Y'all</h1>
+
+    <header class = "banner">
+        <h1 class="header-text">Heroes keep their contacts S.H.I.E.L.D. Secure.</h1>
+    </header>
+
+    <h1>Welcome to the S.H.I.E.L.D. Phonebook {{ current_user.username }}</h1>
+    {% if current_user.is_authenticated %}
+        {% for post in user_posts %}
+            <div class="container">
+               <h3>
+                   <a href="{{ url_for('post_detail', post_id = post.id) }}">{{ post.title }}</a>
+               </h3> 
+               <p>{{ post.content }}</p>
+            </div>
+        {% endfor %}
+    {% else %}
+    <h2>Nothing to show here...</h2>
+
+    {% endif %}
 {% endblock content %}
