--- a/marvel_phonebook_app/templates/nav.html
+++ b/marvel_phonebook_app/templates/nav.html
@@ -6,8 +6,10 @@
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
         <a class="nav-item nav-link active" href="{{ url_for('home') }}">Home <span class="sr-only">(current)</span></a>
-        <a class="nav-item nav-link" href="{{ url_for('register') }}">Register</a>
-        <a class="nav-item nav-link" href="{{ url_for('login') }}">Login</a>
+        <a class="nav-item nav-link" href="{{ url_for('register') }}">register</a>
+        <a class="nav-item nav-link" href="{{ url_for('login') }}">login</a>
+        <a class="nav-item nav-link" href="{{ url_for('logout') }}">logout</a>
+        <a class="nav-item nav-link" href="{{ url_for('posts') }}">contacts</a>
       </div>
     </div>
   </nav>
